 * = Fixed bug with GSL library not loading - installer will now always install Visual C++ Redistributable for Visual Studio 2013 (MSVCRT120.DLL, used by gsl.dll and cblas.dll) if needed
 * = Fixed bug with application not starting on Windows XP because of icon -> now icon is not compressed, still 256x256
 * + EditChart3DWindow can now edit chart area values properties


 ### --------- Version 2.0.0ß - beta -----------  04.03.2016 17:42
 * = TSL examples now are installed in 'my documents' folder and used from there (this resolves issues related to app not having admin right to write in program files dir)
 * = Fixed bugs related to changing editor while having opened tabs in code editor


 ### --------- Version 2.0.0α - alpha 7 -----------  20.10.2015 07:00
 * = There is no more explicit mode you have to set for everything except scripting(real, complex, 3d) - application now can deduce mode based on your expressions, if you really want you can still force mode by choosing one in status bar of app
 * + Added possibility to change font and fontsize of scripting editors and expressiontextbox
 * + New revamped and refreshed user interface, revamped top menu and added fast buttons with images
 * + Added a lot of new options to top menu, like edit menu and keyboard shortcuts
 * + Added a possibility to choose output notation (mathematical or enginnering)
 * = Unified output model everywhere (same fonts, same output number formatting, got rid of any unconsistency)
 * = Native methods cleanup - removed unused and let them be together in one class NativeMethods
 * + Standarize output everywhere so it is consistent mathematical or engineering notation - eg 2⁻¹⁰⁰ or 2E-100 (also included in settings)
 * = Unified autocomplete for both expressions and scripting (same design and items, customizable formats and fonts (with exception of AvalonEdit code editor)